# home-dashboard

./: .bandit  .dockerignore  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run  run.py
.github/workflows/: ci.yml
.trunk/: trunk.yaml
config/: config.yaml  credentials.yaml.example
integrations/: __init__.py  base.py
integrations/base/: pyproject.toml
integrations/base/src/dashboard_integration_base/: __init__.py  base.py
integrations/cameras/: integration.py  pyproject.toml  widget.html
integrations/cameras/src/: __init__.py  go2rtc_client.py  models.py  unifi_protect.py
integrations/example/: __init__.py  integration.py  pyproject.toml  widget.html
integrations/example/src/example_integration/: __init__.py  integration.py  widget.html
integrations/fitness/: integration.py  widget.html
integrations/todoist/: integration.py  widget.html
scripts/: setup-pi.sh  update-loop.sh
server/: __init__.py  config.py  main.py  themes.py
templates/: base.html  dashboard.html
templates/widgets/: cameras.html
tests/: conftest.py  test_api.py  test_cameras_integration.py  test_config.py  test_fitness_integration.py  test_integrations.py  test_theme_integration.py  test_themes.py  test_todoist_integration.py
