[project]
name = "cameras-integration"
version = "0.1.0"
description = "UniFi Protect camera integration for Home Dashboard"
requires-python = ">=3.13"
dependencies = [
  "dashboard-integration-base",
  "httpx>=0.28.1",
  "uiprotect>=6.0.0",
  "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.1",
]

[tool.uv.sources]
dashboard-integration-base = { workspace = true }

[tool.hatch.build.targets.wheel]
only-include = ["integration.py", "widget.html", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
